--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -20,8 +20,7 @@
    "source": [
     "#Calculate largest component size (fraction of infected population) with given R0.\n",
     "#Compares binomial model (green line) with three-point degree distribution model, in which\n",
-    "\n",
-    "#An individual infects exactly 0, a or b new individuals\n",
+    "#an individual infects exactly 0, a or b new individuals\n",
     "#with probability 1-p_a-epsilon, p_a, epsilon\n",
     "#adjusted to have desired R0.\n",
     "\n",
