--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -24,8 +24,7 @@
     "#with probability 1-p_a-epsilon, p_a, epsilon\n",
     "#adjusted to have desired R0.\n",
     "\n",
-    "#Based on Janson, Svante, and Malwina J. Luczak, \"A new approach to the giant component problem.\",\n",
-    "#Random Structures & Algorithms 34.2 (2009): 197-216."
+    "#Based on Janson, Svante, and Malwina J. Luczak, \"A new approach to the giant component problem.\",Random Structures & Algorithms 34.2 (2009): 197-216."
    ]
   },
   {
