--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -70,7 +70,7 @@
     "    plt.hlines(gnp, 0, max_b, color=\"green\")\n",
     "    plt.ylim(0, 1.0)\n",
     "    plt.xlim(0, max_b)\n",
-    "    print(\"{:0.2%} infect {}, 100 * epsilon % (superspeaders) infect b, others infect 0\".format(p_a,int(a)))\n",
+    "    print(\"{:0.2%} infect {}, 100ε% (the superspreaders) infect b, others infect 0\".format(p_a,int(a)))\n",
     "    plt.annotate(\"G(n,p) with np=R0\", (2,gnp+0.01), color=\"green\")\n",
     "    plt.title(\"R0={}, a={}, p_a={}\".format(R0,a,p_a))\n",
     "    plt.xlabel(\"b (how many do superspreaders infect)\")\n",
