--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -18,13 +18,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculate largest component size (fraction of infected population) with given R0.\n",
+    "#Calculate the largest component size (fraction of infected population) with given R0.\n",
     "#Compares binomial model (green line) with three-point degree distribution model, in which\n",
     "#an individual infects exactly 0, a or b new individuals\n",
     "#with probability 1-p_a-epsilon, p_a, epsilon\n",
     "#adjusted to have desired R0.\n",
     "\n",
-    "#Based on Janson, Svante, and Malwina J. Luczak, \"A new approach to the giant component problem.\",Random Structures & Algorithms 34.2 (2009): 197-216."
+    "#Based on Svante Janson, and Malwina J. Luczak, \"A new approach to the giant component problem\", Random Structures & Algorithms 34 (2009): 197-216."
    ]
   },
   {
