--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -9,7 +9,9 @@
     "#coding utf-8\n",
     "\n",
     "#Author: Valentas Kurauskas\n",
-    "#Licence: MIT"
+    "#Licence: MIT\n",
+    "\n",
+    "#NB: I cannot guarantee there are no more bugs here"
    ]
   },
   {
