--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -60,7 +60,7 @@
     "    m = (1-p_a - eps) + p_a * a + eps * b\n",
     "    m2 = (1-p_a - eps) + p_a * a**2 + eps * b**2\n",
     "    if (m2 - 2*m) <= 0: return 0\n",
-    "    f=lambda x: (1-p_a-eps) + p_a * x**a + eps * x**b\n",
+    "    f=lambda x: (1-p_a-eps) * x + p_a * x**a + eps * x**b\n",
     "    df=lambda x: 1 - p_a - eps + a*p_a*x**(a-1) + eps * b * x**(b-1)\n",
     "    res=comp1(f, df, m)[0]\n",
     "    return res\n",
