add info about herd immunity

--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,10 +70,12 @@
     "    plt.bar(range(a+2, max_b+1), [cc(a+1, b+1, R0, p_a) for b in range(a+2,max_b+1)])\n",
     "    gnp = comp1(lambda x: math.exp( R0 * (x-1)), lambda x: R0 * math.exp( R0 * (x-1)), R0)\n",
     "    plt.hlines(gnp, 0, max_b, color=\"green\")\n",
+    "    plt.hlines(1-1/R0, 0, max_b, color=\"blue\")\n",
     "    plt.ylim(0, 1.0)\n",
     "    plt.xlim(0, max_b)\n",
     "    print(\"{:0.2%} infect {}, 100ε% (the superspreaders) infect b, others infect 0\".format(p_a,int(a)))\n",
-    "    plt.annotate(\"G(n,p) with np=R0\", (2,gnp+0.01), color=\"green\")\n",
+    "    plt.annotate(\"G(n,p) with np=R0\", (max_b,gnp+0.01), color=\"green\",ha=\"right\")\n",
+    "    plt.annotate(\"1-1/R0\", (max_b,1-1/R0+0.01), color=\"blue\", ha=\"right\")\n",
     "    plt.title(\"R0={}, a={}, p_a={}\".format(R0,a,p_a))\n",
     "    plt.xlabel(\"b (how many do superspreaders infect)\")\n",
     "    plt.ylabel(\"What fraction will get sick?\")\n",
@@ -82,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b189eae4dca4f24b220bb4ab08a5160",
+       "model_id": "639fc657aee7403a8c2c016c2015d94d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,8 +111,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $G(n,p)$ the blue line is the [\"herd immunity threshold\"](https://en.wikipedia.org/wiki/Herd_immunity#Mechanics) $1 - \\frac 1 {R_0}$. If herd immunity is attained via \"natural infection\" as opposed to vaccination, the epidemics only begins to die out once this point is reached. The total infected fraction (the green line) is quite a bit larger, it is the unique solution $\\rho=\\rho(R_0)$ of $1-\\rho = e^{-R_0 \\rho}$\n",
+    "in the interval $0 < \\rho < 1$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69bbddf3589c4f1bb78ae9bace7df39e",
+       "model_id": "f54f39f9371c48858f616d95e1c624de",
        "version_major": 2,
        "version_minor": 0
       },
