--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,19 @@
     "    plt.title(\"R0={}, a={}, p_a={}\".format(R0,a,p_a))\n",
     "    plt.xlabel(\"b (how many do superspreaders infect)\")\n",
     "    plt.ylabel(\"What fraction will get sick?\")\n",
-    "    plt.grid()"
+    "    plt.grid()\n",
+    "    plt.gca()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "639fc657aee7403a8c2c016c2015d94d",
+       "model_id": "b2072144e4624dd9bca9ab5967ec388c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +163,19 @@
     "    plt.hlines(1, 0, -math.log(xi), linestyles=\"dotted\")\n",
     "    plt.xlabel(\"time (distorted)\")\n",
     "    plt.grid()\n",
-    "    plt.legend()"
+    "    plt.legend()\n",
+    "    plt.gca()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f54f39f9371c48858f616d95e1c624de",
+       "model_id": "8662581b072447e98c1fab88cd9814f3",
        "version_major": 2,
        "version_minor": 0
       },
