--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -65,9 +65,9 @@
     "    res=comp1(f, df, m)[0]\n",
     "    return res\n",
     "\n",
-    "def w(a, R0, p_a, max_b=30):\n",
+    "def plot_toy3(a, R0, p_a, max_b=30):\n",
     "    a=int(a)\n",
-    "    plt.bar(range(a+2, max_b+1), [cc(a+1, b+1, R0, p_a) for b in range(a+2,max_b+1)])\n",
+    "    plt.bar(range(a+2, max_b+1), [cc(a+1, b+1, R0, p_a) for b in range(a+2,max_b+1)], color=\"gray\")\n",
     "    gnp = comp1(lambda x: math.exp( R0 * (x-1)), lambda x: R0 * math.exp( R0 * (x-1)), R0)\n",
     "    plt.hlines(gnp, 0, max_b, color=\"green\")\n",
     "    plt.hlines(1-1/R0, 0, max_b, color=\"blue\")\n",
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2072144e4624dd9bca9ab5967ec388c",
+       "model_id": "aade5a2b41b0487a87f9e53daab14c4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "ipywidgets.interact(w, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
+    "ipywidgets.interact(plot_toy3, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
     "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
     "            max_b=ipywidgets.IntSlider(min=10, max=200, step=10, value=50)\n",
@@ -175,12 +175,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8662581b072447e98c1fab88cd9814f3",
+       "model_id": "eabf0a464aa1435e9ee0c54b4be956ff",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='a', max=10.0, step=1.0), FloatSlider(value=2.0, desc…"
+       "interactive(children=(FloatSlider(value=1.0, description='a', max=10.0, step=1.0), FloatSlider(value=2.5, desc…"
       ]
      },
      "metadata": {},
@@ -192,7 +192,7 @@
     "#Note that the time is (monotonically) transformed, it does not match the real time\n",
     "#y axis shows the proportion of the population \n",
     "ipywidgets.interact(plot_H, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
-    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.0),\n",
+    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
     "            b=ipywidgets.IntSlider(min=2, max=100, step=1, value=10));"
    ]
