--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -54,12 +54,14 @@
     "    return 1 - f(xi(f,df,mu))\n",
     "\n",
     "def cc(a,b,R0,p_a):\n",
+    "    if R0 >= b: #invalid parameters\n",
+    "        return 0\n",
     "    eps = (p_a * (a-1) * (R0-a) + R0)/((b-1)*(b-R0))\n",
     "    if eps < 0 or 1 - p_a - eps < 0:\n",
-    "        return 0\n",
+    "        return 0 #invalid parameters\n",
     "    m = (1-p_a - eps) + p_a * a + eps * b\n",
     "    m2 = (1-p_a - eps) + p_a * a**2 + eps * b**2\n",
-    "    if (m2 - 2*m) <= 0: return 0\n",
+    "    if (m2 - 2*m) <= 0: return 0 #epidemics does not explode\n",
     "    f=lambda x: (1-p_a-eps) * x + p_a * x**a + eps * x**b\n",
     "    df=lambda x: 1 - p_a - eps + a*p_a*x**(a-1) + eps * b * x**(b-1)\n",
     "    res=comp1(f, df, m)[0]\n",
@@ -78,7 +80,7 @@
     "    plt.annotate(\"1-1/R0\", (max_b,1-1/R0+0.01), color=\"blue\", ha=\"right\")\n",
     "    plt.title(\"R0={}, a={}, p_a={}\".format(R0,a,p_a))\n",
     "    plt.xlabel(\"b (how many do superspreaders infect)\")\n",
-    "    plt.ylabel(\"What fraction will get sick?\")\n",
+    "    plt.ylabel(\"Total fraction that will get sick\")\n",
     "    plt.grid()\n",
     "    plt.gca()"
    ]
@@ -91,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aade5a2b41b0487a87f9e53daab14c4d",
+       "model_id": "8f592ca505a34d168541f28d594e88da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,6 +106,7 @@
     }
    ],
    "source": [
+    "#y axis shows the proportion of the population that will get sick at some point, 1=100%\n",
     "ipywidgets.interact(plot_toy3, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
     "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
@@ -126,17 +129,24 @@
    "outputs": [],
    "source": [
     "def H(a,b,R0,p_a):\n",
+    "    empty=(1, lambda x: 0, lambda x: 0, lambda x:0)\n",
+    "    if R0 >= b: \n",
+    "        print(\"Error: R0 should be smaller than b\")\n",
+    "        return empty\n",
     "    eps = (p_a * (a-1) * (R0-a) + R0)/((b-1)*(b-R0))\n",
     "    if eps < 0 or 1 - p_a - eps < 0:\n",
-    "        return 0, lambda x: 0\n",
+    "        print(\"Error: These parameters are invalid\")\n",
+    "        return empty\n",
     "    m = (1-p_a - eps) + p_a * a + eps * b\n",
     "    m2 = (1-p_a - eps) + p_a * a**2 + eps * b**2\n",
-    "    if (m2 - 2*m) <= 0: return 0\n",
+    "    print(\"{:0.2%} infect 0, {:0.2%} infect {}, {:0.2%} infect {}\".format(1-p_a-eps, p_a,int(a-1), eps,b-1))\n",
+    "    if (m2 - 2*m) <= 0:\n",
+    "        print(\"Epidemics ends immediately!\")\n",
+    "        return empty\n",
     "    f = lambda x: (1-p_a-eps) * x + p_a * x**a + eps * x**b\n",
     "    df = lambda x: 1 - p_a - eps + a*p_a*x**(a-1) + eps * b * x**(b-1)\n",
     "    d2 = lambda x: a*(a-1) * p_a * x**a + eps * b * (b-1) * x**b #  from (5.1)\n",
     "    Ed = df(1)\n",
-    "    print(\"{:0.2%} infect 0, {:0.2%} infect {}, {:0.2%} infect {}\".format(1-p_a-eps, p_a,int(a-1), eps,b-1))\n",
     "    return xi(f,df,m), lambda x: Ed * x ** 2 - x * df(x), lambda x: d2(x)/(x*df(x)), f"
    ]
   },
@@ -175,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eabf0a464aa1435e9ee0c54b4be956ff",
+       "model_id": "d5b72e8802344254950e581976845fd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -190,7 +200,7 @@
    "source": [
     "#\"Superspreaders\" cause large Rt in the beginning but are explored sooner.\n",
     "#Note that the time is (monotonically) transformed, it does not match the real time\n",
-    "#y axis shows the proportion of the population \n",
+    "#y axis shows the proportion of the population, 1=100%\n",
     "ipywidgets.interact(plot_H, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
     "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
