--- a/giant_comp_3point.ipynb
+++ b/giant_comp_3point.ipynb
@@ -43,7 +43,7 @@
     "def xi(f, df, mu):\n",
     "    if df(1) <= 1: return 0\n",
     "    g = lambda x: x * mu - df(x)\n",
-    "    xi = fsolve(g, 0)\n",
+    "    xi = fsolve(g, 0)[0]\n",
     "    if (xi < 0 or xi > 1):\n",
     "        return 0\n",
     "    return xi\n",
@@ -61,10 +61,10 @@
     "        return 0 #invalid parameters\n",
     "    m = (1-p_a - eps) + p_a * a + eps * b\n",
     "    m2 = (1-p_a - eps) + p_a * a**2 + eps * b**2\n",
-    "    if (m2 - 2*m) <= 0: return 0 #epidemics does not explode\n",
+    "    if m2 - 2*m <= 1e-4: return 0 #epidemics does not explode\n",
     "    f=lambda x: (1-p_a-eps) * x + p_a * x**a + eps * x**b\n",
     "    df=lambda x: 1 - p_a - eps + a*p_a*x**(a-1) + eps * b * x**(b-1)\n",
-    "    res=comp1(f, df, m)[0]\n",
+    "    res=comp1(f, df, m)\n",
     "    return res\n",
     "\n",
     "def plot_toy3(a, R0, p_a, max_b=30):\n",
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f592ca505a34d168541f28d594e88da",
+       "model_id": "824d48329e0042df8a8446e849eb29c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
    "source": [
     "#y axis shows the proportion of the population that will get sick at some point, 1=100%\n",
     "ipywidgets.interact(plot_toy3, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
-    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
+    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.05, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
     "            max_b=ipywidgets.IntSlider(min=10, max=200, step=10, value=50)\n",
     "         );"
@@ -185,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5b72e8802344254950e581976845fd7",
+       "model_id": "70df9fc45d1847e5ada308c0683f8473",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
     "#Note that the time is (monotonically) transformed, it does not match the real time\n",
     "#y axis shows the proportion of the population, 1=100%\n",
     "ipywidgets.interact(plot_H, a=ipywidgets.FloatSlider(min=0, max=10, step=1, value=1),\n",
-    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.1, value=2.5),\n",
+    "            R0=ipywidgets.FloatSlider(min=0, max=10, step=0.05, value=2.5),\n",
     "            p_a=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.3),\n",
     "            b=ipywidgets.IntSlider(min=2, max=100, step=1, value=10));"
    ]
